# wechat_summary

./: .gitignore  README.md  dump_hierarchy.py  pyproject.toml  ruff.toml  test_llm_connection.py
prompts/: system_prompt.txt  user_template.txt
src/wechat_summary/: __init__.py  __main__.py  calibrator.py  cli.py  config.py  device.py  exceptions.py  extractor.py  gui.py  llm_client.py  models.py  navigator.py  orchestrator.py  persistence.py  selectors.py  summarizer.py
tests/: __init__.py  conftest.py  test_calibrator.py  test_cli.py  test_config.py  test_device.py  test_e2e.py  test_extract_all.py  test_extractor.py  test_fixtures_smoke.py  test_llm_client.py  test_models.py  test_navigator.py  test_persistence.py  test_selectors.py  test_summarizer.py
tests/fixtures/: sample_llm_response.json  wechat_chat_hierarchy.xml  wechat_chat_hierarchy_scrolled.xml  wechat_personal_chat.xml  wechat_personal_chat_scrolled.xml
